[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["skarj <skaarj.sergey@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.games.games:main"
brain-even = "brain_games.games.even:main"
brain-calc = "brain_games.games.calc:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
